--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
-plugins {
+    plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
+
 }
 
 group = 'io.github.mrbonk97.analyzer'
@@ -33,4 +33,11 @@ jar {
                 'Main-Class': 'io.github.mrbonk97.analyzer.Main'
         )
     }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
 }
